--- a/package.json
+++ b/package.json
@@ -6,12 +6,22 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "tailwind": "npx tailwindcss -i ./src/styles/source_tailwind.css -o ./src/styles/tailwind.css --watch"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.8.5",
+    "bson-objectid": "^2.0.3",
+    "firebase": "^9.8.3",
     "next": "12.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
+    "sweetalert2": "^11.4.18",
+    "tailwindcss": "^3.1.4"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
