--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/utils/firebase/data.js", "src/utils/firebase/config.ts", "src/pages/history.tsx", "src/pages/history2.jsx"],
   "exclude": ["node_modules"]
 }
