--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.5",
+    "axios": "^0.27.2",
     "bson-objectid": "^2.0.3",
     "firebase": "^9.8.3",
     "next": "12.1.6",
